--- a/requirements.txt
+++ b/requirements.txt
@@ -265,6 +265,7 @@ weather-forecast==0.49
 weatherfrcst==0.0.1
 webencodings==0.5.1
 Werkzeug==1.0.1
+whitenoise==6.1.0
 widgetsnbextension==3.6.0
 wrapt==1.12.1
 wxPython==4.1.1
