--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,9 @@ stack-data==0.2.0
 urllib3==1.25.8
 virtualenv==20.0.17
 Werkzeug==1.0.1
-
+asgiref==3.4.1
+Django==3.2.5
+pip==21.1.3
+pytz==2021.1
+setuptools==56.0.0
+django-heroku==0.3.1
